--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -16,7 +16,9 @@
       }
       .mdl-card {
         padding-bottom: 10px;
-        min-width: 500px;
+        min-width: 200px;
+        float: left;
+        margin-right: 30px;
       }
       
     </style>
