--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -16,9 +16,13 @@
       }
       .mdl-card {
         padding-bottom: 10px;
-        min-width: 200px;
+        min-width: 650px;
         float: left;
         margin-right: 30px;
+      }
+
+      li {
+         list-style-type: none;
       }
       
     </style>
