--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -1,33 +1,51 @@
-<!-- public/views/layouts/main.hbs -->
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <style>
-      .mdl-layout__content {
-        padding: 24px;
-        flex: none;
-      }
-      .mdl-textfield__error {
-        visibility: visible;
-        padding: 5px;
-      }
-      .mdl-card {
-        padding-bottom: 10px;
-        min-width: 650px;
-        float: left;
-        margin-right: 30px;
-      }
-
-      li {
-         list-style-type: none;
-      }
-      
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Earth Points Dashboard Demo</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
+    <link href="css/mdb.min.css?ver=1.1.0" rel="stylesheet">
+    <link href="css/main.css?ver=1.1.0" rel="stylesheet">
   </head>
-  <body>
+  <body id="top">
+    <header>
+      <!-- Navbar-->
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar" id="navbar">
+        <div class="container"><a class="navbar-brand" href="#"><strong>Earth Points Dashboard Demo</strong></a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          {{#if user }}
+          <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a class="nav-link" href="#contact">Logged in as {{ user.firstName }}</a></li>
+            </ul><a class="btn btn-primary btn-rounded my-0" href="/logout" target="_blank">Logout</a>
+          </div>
+          {{/if}}
+          <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="navbarContent">-->
+          </div>
+        </div>
+      </nav>
+      <!-- Intro Section-->
+    </header>
     {{{ body }}}
+    
+<footer class="page-footer green darken-2 center-on-small-only pt-0 mt-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="mb-5 flex-center"><a class="px-3" href="#"><i class="fa fa-facebook fa-lg white-text"></i></a><a class="px-3" href="#"><i class="fa fa-twitter fa-lg white-text"></i></a></div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script type="text/javascript" src="scripts/jquery.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/popper.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/bootstrap.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/wow.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/mdb.min.js?ver=1.1.0"></script>
+    <script>new WOW().init();</script>
   </body>
 </html>
