Add indicators some features are disabled

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -41,9 +41,9 @@
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-teal-strong py-3 px-3 rounded">
             <div class="card-body">
-              <div class="py-5"><b>Connect Twitter</b></div>
+              <div class="py-5"><b>Connect Facebook</b></div>
               <div class="py-5"><b>10 <i class="fa fa-globe fa-2x green-text"></i></b></div>
-              <a class="btn btn-outline-white mt-5" href="/login/twitter">Connect</a>
+              <a class="btn disabled btn-outline-white mt-5">Coming soon</a>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
             <div class="card-body">
               <div class="py-5"><b>Connect Instagram</b></div>
               <div class="py-5"><b>10 <i class="fa fa-globe fa-2x green-text"></i></b></div>
-              <a class="btn btn-outline-white mt-5" href="/login/instagram">Connect</a>
+              <a class="btn disabled btn-outline-white mt-5">Coming soon</a>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
             <div class="card-body">
               <div class="py-5"><b>Share today's post</b></div>
               <div class="py-5"><b>15 <i class="fa fa-globe fa-2x green-text"></i></b></div>
-              <a class="btn btn-outline-white mt-5" href="/login/instagram">Share</a>
+              <a class="btn btn-outline-white mt-5" href="#">Share</a>
             </div>
           </div>
         </div>
