--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -38,17 +38,7 @@
       <h2 class="h1 pt-5 pb-3">Login or connect:</h2>
     </div>
     <div class="row wow zoomIn">
-      <div class="col-lg-4 col-md-12 mb-5 facebook">
-        <div class="card card-image">
-          <div class="text-white text-center pricing-card d-flex align-items-center rgba-stylish-strong py-3 px-3 rounded">
-            <div class="card-body">
-              <div class="py-5"><span class="display-4">Facebook</span></div>
-              <a class="btn btn-outline-white mt-5" href="/login/facebook">Connect</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-12 mb-5 twitter">
+    <div class="col-lg-4 col-md-12 mb-5 twitter">
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-teal-strong py-3 px-3 rounded">
             <div class="card-body">
@@ -58,12 +48,23 @@
           </div>
         </div>
       </div>
+    
+      <div class="col-lg-4 col-md-12 mb-5 facebook">
+        <div class="card card-image">
+          <div class="text-white text-center pricing-card d-flex align-items-center rgba-stylish-strong py-3 px-3 rounded">
+            <div class="card-body">
+              <div class="py-5"><span class="display-4">Facebook</span></div>
+              <a class="btn btn-outline-white disabled mt-5">Coming soon</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-lg-4 col-md-12 mb-5 instagram">
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-red-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Instagram</span></div>
-              <a class="btn btn-outline-white mt-5" href="/login/instagram">Connect</a>
+              <a class="btn btn-outline-white disabled mt-5">Coming soon</a>
             </div>
           </div>
         </div>
