Add support for multiple platforms

--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -43,7 +43,7 @@
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-teal-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Twitter</span></div>
-              <a class="btn btn-outline-white mt-5" href="/login/twitter">Connect</a>
+              <a class="btn btn-outline-white mt-5" href="/login/twitter">Login</a>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-stylish-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Facebook</span></div>
-              <a class="btn btn-outline-white disabled mt-5">Coming soon</a>
+              <a class="btn btn-outline-white mt-5" href="/login/facebook">Login</a>
             </div>
           </div>
         </div>
@@ -64,7 +64,7 @@
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-red-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Instagram</span></div>
-              <a class="btn btn-outline-white disabled mt-5">Coming soon</a>
+              <a class="btn btn-outline-white mt-5"  href="/login/instagram">Login</a>
             </div>
           </div>
         </div>
