--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12 mb-5 instagram">
+      <!--<div class="col-lg-4 col-md-12 mb-5 instagram">
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-red-strong py-3 px-3 rounded">
             <div class="card-body">
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
 </section>
