Change point event display syntax

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -15,7 +15,7 @@
               <div class="row mb-12">
                 <div class="col-1 mr-1"><i class="fa fa-{{this.icon}} fa-2x"></i></div>
                 <div class="col-6">
-                  <h5 class="font-weight-bold">You {{this.verb}} on {{this.platform}} - {{this.formattedTimestamp}}</h5>
+                  <h5 class="font-weight-bold">You {{this.verb}} {{this.platform}} - {{this.formattedTimestamp}}</h5>
                   <p class="grey-text">
                     {{this.message}}
                   </p>
