Remove demoish content

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -95,8 +95,9 @@
       <div class="wow fadeIn">
         <h2 class="h1 pt-5 pb-3 text-center">About Conscious Planet</h2>
         <p class="px-5 mb-5 pb-3 lead text-center">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate
-          esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
+          Conscious Planet is a Global Movement to initiate a conscious approach to soil and planet. The movement seeks to show governments of all nations that their citizens want a policy to revitalize soil and ecology.
+<br/><br/>
+Thousands of eminent intellectuals, scientists, celebrities, policy experts and spiritual leaders are uniting for this common goal, to restore the soil and rekindle humanity’s relationship with Mother Earth.
         </p>
       </div>
     </div>
