--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -3,26 +3,26 @@
       <section class="text-center py-5 grey lighten-4" id="about">
         <div class="container">
           <div class="wow fadeIn">
-            <h2 class="h1 pt-5 pb-3">Welcome to Earth Points Dashboard Demo!</h2>
+            <h2 class="h1 pt-5 pb-3">Welcome to Earth Points Dashboard!</h2>
             <p class="px-5 mb-5 pb-3 lead blue-grey-text">
               The Earth Point Dashboard helps keep track of your efforts and allows you to earn points & spend them in various ways.
             </p>
           </div>
           <div class="row">
             <div class="col-md-4 mb-5 wow fadeInUp" data-wow-delay=".3s">
-              <img class="img-fluid rounded z-depth-2" src="img/step1.png" alt="project image"/>
+              <!--<img class="img-fluid rounded z-depth-2" src="img/step1.png" alt="project image"/>-->
               <h3 class="h4 mt-3">Step 1</h3>
               <p class="mt-3 blue-grey-text">
                 Connect your social media
               </p>
             </div>
-            <div class="col-md-4 mb-5 wow fadeInUp" data-wow-delay=".4s"><img class="img-fluid rounded z-depth-2" src="img/step2.png" alt="project image"/>
+            <div class="col-md-4 mb-5 wow fadeInUp" data-wow-delay=".4s"><!--<img class="img-fluid rounded z-depth-2" src="img/step2.png" alt="project image"/>-->
               <h3 class="h4 mt-3">Step 2</h3>
               <p class="mt-3 blue-grey-text">
                 Earn points by doing various tasks
               </p>
             </div>
-            <div class="col-md-4 mb-5 wow fadeInUp" data-wow-delay=".5s"><img class="img-fluid rounded z-depth-2" src="img/step3.png" alt="project image"/>
+            <div class="col-md-4 mb-5 wow fadeInUp" data-wow-delay=".5s"><!--<img class="img-fluid rounded z-depth-2" src="img/step3.png" alt="project image"/>-->
               <h3 class="h4 mt-3">Step 3</h3>
               <p class="mt-3 blue-grey-text">
                 Redeem points. Plant a tree, get vouchers...
@@ -79,8 +79,9 @@
       <div class="wow fadeIn">
         <h2 class="h1 pt-5 pb-3 text-center">About Conscious Planet</h2>
         <p class="px-5 mb-5 pb-3 lead text-center">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate
-          esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
+          Conscious Planet is a Global Movement to initiate a conscious approach to soil and planet. The movement seeks to show governments of all nations that their citizens want a policy to revitalize soil and ecology.
+<br/><br/>
+Thousands of eminent intellectuals, scientists, celebrities, policy experts and spiritual leaders are uniting for this common goal, to restore the soil and rekindle humanity’s relationship with Mother Earth.
         </p>
       </div>
     </div>
