--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -35,7 +35,7 @@
 <section class="text-center py-5" id="pricing">
   <div class="container">
     <div class="wow fadeIn">
-      <h2 class="h1 pt-5 pb-3">Login or connect:</h2>
+      <h2 class="h1 pt-5 pb-3">Login:</h2>
     </div>
     <div class="row wow zoomIn">
     <div class="col-lg-4 col-md-12 mb-5 twitter">
@@ -54,7 +54,7 @@
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-stylish-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Facebook</span></div>
-              <a class="btn btn-outline-white mt-5" href="/login/facebook">Login</a>
+              <a class="btn btn-outline-white mt-5" href="/login/facebook"><img class="img-fluid fb-logo" src="img/fb_logo.png" alt="Facebook logo"/> Login with Facebook</a>
             </div>
           </div>
         </div>
@@ -69,6 +69,15 @@
           </div>
         </div>
       </div>-->
+    </div>
+    <div class="row text-center text-muted">
+             <div class="col-lg-12 col-md-12 mb-5 twitter">
+             
+        We don't post anything to these platforms.
+      <br/>
+      By signing in, you agree to our <a href="https://www.consciousplanet.org/terms-and-conditions/">Terms of
+      Service</a> and <a href="http://consciousplanet.org/privacy-policy/">Privacy Policy</a>
+      </div>
     </div>
   </div>
 </section>
