Match wording with Twitter

--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -43,7 +43,7 @@
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-teal-strong py-3 px-3 rounded">
             <div class="card-body">
               <div class="py-5"><span class="display-4">Twitter</span></div>
-              <a class="btn btn-outline-white mt-5" href="/login/twitter">Login</a>
+              <a class="btn btn-outline-white mt-5" href="/login/twitter">Login with Twitter</a>
             </div>
           </div>
         </div>
