--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -1,6 +1,6 @@
       <div id="content">
 
-      <section class="text-center py-5 grey lighten-4" id="about">
+      <section class="mt-5 text-center py-5 grey lighten-4" id="about">
         <div class="container">
           <div class="wow fadeIn">
             <h2 class="h1 pt-5 pb-3">Welcome to Earth Points Dashboard!</h2>
