Small style adjustment of event lines

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -13,14 +13,17 @@
 
         {{#each events}}
               <div class="row mb-12">
-                <div class="col-1 mr-1"><i class="fa fa-{{this.icon}} fa-2x"></i></div>
-                <div class="col-6">
-                  <h5 class="font-weight-bold">You {{this.verb}} {{this.platform}} - {{this.formattedTimestamp}}</h5>
-                  <p class="grey-text">
-                    {{this.message}}
+                <div class="offset-2 col-1 mr-1 mt-2"><i class="mt-1 fa fa-{{this.icon}} fa-2x"></i></div>
+                <div class="col-5">
+                  <p class="grey-text"></p>
+                  You {{this.verb}} {{this.platform}} - {{this.formattedTimestamp}}
                   </p>
+                  
+                  <h5 class="font-weight-bold">
+                    {{this.message}}
+                  </h5>
                 </div>
-                <div class="col-2"><b><span class="display-5">{{this.points}}</span></b> <span style="font-size: 18px;">🌎</span></div>
+                <div class="col-2 mt-3"><h5>{{this.points}} 🌎</h5> </div>
               </div>
          {{/each}}
       </div>
