Wire up Instagram thumbnails

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -13,7 +13,13 @@
 
         {{#each events}}
               <div class="row mb-12">
-                <div class="offset-2 col-1 mr-1 mt-2"><i class="mt-1 fa fa-{{this.icon}} fa-2x"></i></div>
+                <div class="offset-2 col-1 mr-1 mt-2">
+                  {{#if this.imageUrl}}
+                    <img src={{this.imageUrl}} class="thumbnail"/>
+                  {{else}}
+                    <i class="mt-1 fa fa-{{this.icon}} fa-2x"></i>
+                  {{/if}} 
+                </div>
                 <div class="col-5">
                   <p class="grey-text"></p>
                   You {{this.verb}} {{this.platform}} - {{this.formattedTimestamp}}
