--- a/public/mail-templates/daily-message.hbs
+++ b/public/mail-templates/daily-message.hbs
@@ -9,6 +9,5 @@
 	 </p>
 <p
 	style="margin: 0; font-size: 16px; mso-line-height-alt: 24px;">
-	<span style="font-size:16px;">You have {{points}} Earth Points! You can
-		spent points:</span></p>
+	<span style="font-size:16px;">You have {{points}} Earth Points!</span></p>
 {{> footer }}
