Hook up the footer image with the right URL (or hide if not provided)

--- a/public/mail-templates/partials/footer.hbs
+++ b/public/mail-templates/partials/footer.hbs
@@ -35,11 +35,14 @@
                                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                       <tbody>
                                         <tr>
-                                          <td align="center" style="padding:0;Margin:0;font-size:0px"><img
-                                              src="https://ptpbhc.stripocdn.email/content/guids/CABINET_14cf1a8761a47eadb9f45661e7f8f9e0/images/frame_16_4.png"
+                                          <td align="center" style="padding:0;Margin:0;font-size:0px">
+                                            {{#if footerImage}}
+                                            <img
+                                              src="{{footerImage}}"
                                               alt=""
                                               style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
                                               width="212"></td>
+                                            {{/if}}
                                         </tr>
                                       </tbody>
                                     </table>
