--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -13,8 +13,8 @@
   <body id="top">
     <header>
       <!-- Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar" id="navbar">
-        <div class="container"><a class="navbar-brand" href="#"><strong>Earth Points Dashboard</strong></a>
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar" id="navbar" {{#if environment}}style="background-color: red !important"{{/if}}>
+        <div class="container"><a class="navbar-brand" href="#"><strong>Earth Points Dashboard{{#if environment}} - WARNING {{environment}} SYSTEM{{/if}}</strong></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           {{#if user }}
           <div class="collapse navbar-collapse" id="navbarContent">
