--- a/public/point-badge/share/twitter.hbs
+++ b/public/point-badge/share/twitter.hbs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta name="twitter:card" content="SaveSoil">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@cpsavesoil">
         <meta name="twitter:title" content="Look How Many Points I Have">
         <meta name="twitter:description" content="I have shared a post and earned points. Share a post to #SaveSoil">
