feat: facebook sharer corrections

--- a/public/point-badge/share/facebook.hbs
+++ b/public/point-badge/share/facebook.hbs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta property="og:url"           content="{{base_url}}" />
+        <meta property="og:url"           content="{{base_url}}/point-badge?point={{point}}&total={{total}}&streak={{streak}}&theme={{theme}}&confetti={{confetti}}&share=facebook" />
         <meta property="og:type"          content="website" />
         <meta property="og:title"         content="Look How Many Points I Have" />
         <meta property="og:description"   content="I have shared a post and earned points. You too share a post to #SaveSoil. http://savesoil.com" />
