chore: name symetry

--- a/public/mail-templates/partials/footer.hbs
+++ b/public/mail-templates/partials/footer.hbs
@@ -77,7 +77,7 @@
                                                   <td align="center" valign="top" width="33.33%" bgcolor="transparent"
                                                     style="Margin:0;padding-left:5px;padding-right:5px;padding-top:30px;padding-bottom:20px;border:0;border-radius:0px 0px 0px 20px"
                                                     id="esd-menu-id-0"><a target="_blank"
-                                                      href="https://twitter.com/intent/tweet?url={{encodeURI footerImage}}%26share%3Dtwitter"
+                                                      href="https://twitter.com/intent/tweet?url={{encodeURIComponent footerImage}}%26share%3Dtwitter"
                                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;display:block;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;color:#2CB543;font-size:14px"><img
                                                         src="https://ptpbhc.stripocdn.email/content/guids/CABINET_14cf1a8761a47eadb9f45661e7f8f9e0/images/whitetwitterlogovectorstencilanimalbirdsilhouettetransparentpng173007.png"
                                                         alt="Item1" title="Item1" height="39"
@@ -86,7 +86,7 @@
                                                   <td align="center" valign="top" width="33.33%" bgcolor="transparent"
                                                     style="Margin:0;padding-left:5px;padding-right:5px;padding-top:30px;padding-bottom:20px;border:0"
                                                     id="esd-menu-id-1"><a target="_blank"
-                                                      href="https://www.facebook.com/sharer/sharer.php?u={{encodeURI footerImage}}%26share%3Dfacebook"
+                                                      href="https://www.facebook.com/sharer/sharer.php?u={{encodeURIComponent footerImage}}%26share%3Dfacebook"
                                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;display:block;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;color:#2CB543;font-size:14px"><img
                                                         src="https://ptpbhc.stripocdn.email/content/guids/CABINET_14cf1a8761a47eadb9f45661e7f8f9e0/images/facebooklogowhitewhiteffacebooklogosymboltrademarkcrosstexttransparentpng1141531_1.png"
                                                         alt="Item2" title="Item2" height="39"
