--- a/public/point-badge/share/twitter.hbs
+++ b/public/point-badge/share/twitter.hbs
@@ -4,7 +4,7 @@
         <meta name="twitter:site" content="@cpsavesoil">
         <meta name="twitter:title" content="Look How Many Points I Have">
         <meta name="twitter:description" content="I have shared a post and earned points. You too share a post to #SaveSoil. http://savesoil.com">
-        <meta name="twitter:image" content="{{base_url}}/point-badge?point={{point}}&total={{total}}&streak={{streak}}&theme={{theme}}&confetti={{confetti}}">
+        <meta name="twitter:image" content="{{base_url}}/point-badge?point={{point}}&total={{total}}&streak={{streak}}&theme={{theme}}&confetti={{confetti}}&random={{random}}">
         <meta name="twitter:image:alt" content="The Points That Will Save Soil">
     </head>
     <body>
