fix: social share twitter meta content type addition

--- a/public/point-badge/share/twitter.hbs
+++ b/public/point-badge/share/twitter.hbs
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta content="text/html; charset=UTF-8" name="Content-Type" />
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@cpsavesoil">
         <meta name="twitter:title" content="Look How Many Points I Have">
