chore: maile template arrangements

--- a/public/mail-templates/partials/footer.hbs
+++ b/public/mail-templates/partials/footer.hbs
@@ -92,28 +92,9 @@
                                                         alt="Item2" title="Item2" height="39"
                                                         style="display:inline-block !important;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;vertical-align:middle"></a>
                                                   </td>
-                                                  <td align="center" valign="top" width="33.33%" bgcolor="transparent"
-                                                    style="Margin:0;padding-left:5px;padding-right:5px;padding-top:30px;padding-bottom:20px;border:0;border-radius:0px 0px 20px"
-                                                    id="esd-menu-id-2"><a target="_blank"
-                                                      href="https://www.instagram.com/consciousplanet"
-                                                      style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;display:block;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;color:#2CB543;font-size:14px"><img
-                                                        src="https://ptpbhc.stripocdn.email/content/guids/CABINET_14cf1a8761a47eadb9f45661e7f8f9e0/images/instagramiconwhite6whitebackgroundinstagramlogodryerappliancesymboltexttransparentp.png"
-                                                        alt="Item3" title="Item3" height="39"
-                                                        style="display:inline-block !important;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;vertical-align:middle"></a>
-                                                  </td>
                                                 </tr>
                                               </tbody>
                                             </table>
-                                          </td>
-                                        </tr>
-                                        <tr>
-                                          <td align="left" style="padding:0;Margin:0">
-                                            <p
-                                              style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px">
-                                              <em>Find Save Soil in your local language <a target="_blank"
-                                                  href="https://kit.savesoil.eu/#333590c0c29740b6918313661933d6c3"
-                                                  style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#2CB543;font-size:14px">here</a></em>
-                                            </p>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -548,10 +529,7 @@
                                                   href="https://www.consciousplanet.org/privacy-policy">Privacy</a></u>
                                               | <u><a target="_blank"
                                                   style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:12px;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif"
-                                                  href="unsubscribe_from_list">Unsubscribe</a></u> | <u><a
-                                                  target="_blank"
-                                                  style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:12px;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif"
-                                                  href="manage_subscription">Manage Email Preferences</a></u></p>
+                                                  href="mailto:volunteers.uk@consciousplanet.org">Unsubscribe</a></u></p>
                                           </td>
                                         </tr>
                                         <!--[if !mso]><!-- -->
