--- a/public/mail-templates/partials/header.hbs
+++ b/public/mail-templates/partials/header.hbs
@@ -474,7 +474,7 @@
                               <tbody>
                                 <tr>
                                   <td
-                                    style="Margin:0;line-height:14px;padding-top:10px;padding-right:0px;padding-bottom:10px;padding-left:0px">
+                                    style="Margin:0;line-height:14px;padding-top:10px;padding-right:0px;padding-bottom:10px;padding-left:0px;display:none;">
                                     <div
                                       style="font-size:12px;line-height:14px;font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif">
                                       <p
