feat: adding google analytics tag to dashboard and landing pages.

--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -9,6 +9,17 @@
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/mdb.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    {{#if gtag}}
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E2LXQSQCZ"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '{{gtag}}');
+      </script>
+    {{/if}}
   </head>
   <body id="top">
     <header>
